--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "roots/wordpress": "*",
         "wpackagist-plugin/nginx-helper":"2.2.1",
         "wpackagist-theme/hueman":"*"
     },
