--- a/.drone.yml
+++ b/.drone.yml
@@ -7,4 +7,7 @@ steps:
   image: composer:1.10.1
   commands:
     - composer install
+- name: Deploy
+  image: alpine:latest
+  commands:
     - ls -la
