--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,20 @@ steps:
   image: composer:1.10.1
   commands:
     - composer install
-- name: Deploy
+  when:
+    branch:
+    - master
+    - homolog
+
+- name: DeployHomolog
   image: alpine:latest
   commands:
-    - ls -la
+    - apk update && apk upgrade && apk add --no-cache rsync git openssh-client
+    - mkdir -p ~/.ssh
+    - echo -e "$KEY_HOMOLOG" > ~/.ssh/id_rsa
+    - chmod 600  ~/.ssh/id_rsa
+    - 'echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+  when:
+    branch:
+    - homolog
+  
