--- a/.drone.yml
+++ b/.drone.yml
@@ -14,12 +14,14 @@ steps:
 
 - name: DeployHomolog
   image: alpine:latest
+  secrets: [ KEY_HOMOLOG ]
   commands:
     - apk update && apk upgrade && apk add --no-cache rsync git openssh-client
     - mkdir -p ~/.ssh
-    - echo -e "$KEY_HOMOLOG" > ~/.ssh/id_rsa
+    - echo -e "$${KEY_HOMOLOG}" > ~/.ssh/id_rsa
     - chmod 600  ~/.ssh/id_rsa
     - 'echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - ssh root@ssh.linuxsolutions.xyz 'ls -la /var/www'
   when:
     branch:
     - homolog
