--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
   commands:
     - apk update && apk upgrade && apk add --no-cache rsync git openssh-client
     - mkdir -p ~/.ssh
-    - echo -e "$${KEY_HOMOLOG}" > ~/.ssh/id_rsa
+    - echo -e "$KEY_HOMOLOG" > ~/.ssh/id_rsa
     - chmod 600  ~/.ssh/id_rsa
     - 'echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - cat ~/.ssh/id_rsa
