--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
     - echo -e "$KEY" > ~/.ssh/id_rsa
     - chmod 600  ~/.ssh/id_rsa
     - 'echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - rsync -ahrvz --delete-excluded --exclude='.git/' --exclude='.gitlab-ci.yml' --exclude='wp-content/uploads/' --exclude='.gitignore' --chmod="D755,F644" --chown=www-data:www-data -e "ssh -oStrictHostKeyChecking=no " --rsync-path="sudo rsync" * debian@ssh.linuxsolutions.xyz:/var/www/$PROJECT.linuxsolutions.xyz/htdocs
+    - rsync -ahrvz --delete-excluded --chmod="D755,F644" --chown=www-data:www-data -e "ssh -oStrictHostKeyChecking=no " --rsync-path="sudo rsync" * debian@ssh.linuxsolutions.xyz:/var/www/$PROJECT.linuxsolutions.xyz/htdocs
   when:
     branch:
       - homolog
