--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "Acme": "src/"
         }
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "scripts": {
         "move-wordpress": [
             "rm -rf wordpress/wp-content/plugins/*",
