--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
+        "php": ">=7.1",
         "roots/wordpress": "*",
         "wpackagist-plugin/nginx-helper":"2.2.1",
         "wpackagist-theme/hueman":"*"
@@ -18,7 +19,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "squizlabs/php_codesniffer": "3.5.4",
+        "roave/security-advisories": "dev-master"
     },
     "scripts": {
         "move-wordpress": [
@@ -33,7 +36,9 @@
         ],
         "post-update-cmd": [
             "@move-wordpress"
+        ],
+        "test": [
+            "phpcs"
         ]
     }
-
 }
