--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
+# ignore all WordPress folders
+wp-admin
+wp-includes
+wp-content/plugins/*
+wp-content/themes/*
+wp-content/uploads
+wp-content/cache
+wp-content/index.php
 
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
+# ignore all files in root
+/*.*
 
-# ignore these plugins
-wp-content/plugins/hello.php
-
-# ignore specific themes
-wp-content/themes/twenty*/
-
-# ignore node dependency directories
-node_modules/
+# npm e composer
+node_modules
+.cache
+/vendor
+wp-content/themes/{Nome do Tema}/vendor/
+wp-content/themes/{Nome do Tema}/dist/
 
 # ignore log files and databases
+.phpintel
+.htaccess
+.DS_Store
 *.log
 *.sql
 *.sqlite
+*.zip
+*.tgz
+*.gz
+*.tar
+*.tar.gz
+*.lock
+
+# files to keep
+!.gitignore
+!.gitlab-ci.yml
+!README.md
+!composer.json
+!composer.lock
+!wp-content/themes/{Nome do Tema}
